## Process this file with automake to produce Makefile.in

SUBDIRS		= fr ja ko pl ru sk

man_MANS	= gendiff.1 rpm.8 rpmbuild.8 rpmcache.8 rpmdeps.8 rpmgraph.8 rpm2cpio.8

EXTRA_DIST	= $(man_MANS)

EXTRA_DIST	+= \
manual/builddependencies \
manual/buildroot \
manual/conditionalbuilds \
manual/dependencies \
manual/format \
manual/hregions \
manual/macros \
manual/multiplebuilds \
manual/queryformat \
manual/relocatable \
manual/rollbacks \
manual/signatures \
manual/spec \
manual/triggers \
manual/tsort
